# ytstudio-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ANALYTICS_PLAN.md  LICENSE  README.md  demo.tape  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  test.yml
docs/: agent-skill.md  analytics.md  api-quota.md  comments.md  index.md  installation.md  livestreams.md  mcp.md  playlists.md  profiles.md  setup.md  videos.md
docs/stylesheets/: extra.css
scripts/: build_docs_reference.py  build_skill_reference.py  terminaltrove-demo.tape
skills/ytstudio/: SKILL.md
skills/ytstudio/assets/: upload-sidecar.example.yaml
skills/ytstudio/references/: reference.md
src/ytcli/: __init__.py  auth.py  config.py  demo.py  main.py  ui.py
src/ytcli/commands/: __init__.py  analytics.py  auth.py  comments.py  export.py  seo.py  videos.py
src/ytstudio/: api.py  auth.py  banner.py  banner.txt  config.py  demo.py  demo_service.py  main.py  registry.py  services.py  ui.py  upload_pipeline.py  version.py
src/ytstudio/commands/: __init__.py  analytics.py  auth.py  channel.py  comments.py  demo.py  export.py  livestreams.py  mcp_cmd.py  moderate.py  playlists.py  profile.py  seo.py  upload.py  videos.py
src/ytstudio/demo_data/: analytics_metrics.json  broadcasts.json  channel.json  comments.json  live_streams.json  playlist_items.json  videos.json
src/ytstudio/fixtures/: analytics_overview.json  channel.json  comments.json  playlist_items.json  videos.json
src/ytstudio/mcp/: models.py  playlists.py  server.py
tests/: __init__.py  conftest.py  test_analytics.py  test_api.py  test_auth.py  test_banner.py  test_captions.py  test_channel.py  test_comments.py  test_config.py  test_demo.py  test_demo_service.py  test_livestreams.py  test_main.py  test_mcp_cli.py  test_mcp_env_gating.py  test_mcp_server.py  test_playlists.py  test_profile.py  test_registry.py  test_seo.py  test_skill_reference.py  test_upload_command.py  test_upload_pipeline.py  test_version.py  test_videos.py
