[project]
name = "ytcli"
version = "0.1.0"
description = "CLI tool to manage and analyze your YouTube channel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Jelmer de Wit", email = "1598297+jdwit@users.noreply.github.com" }
]
keywords = ["youtube", "cli", "analytics", "video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
yt = "ytcli.main:app"

[project.urls]
Homepage = "https://github.com/jdwit/ytcli"
Repository = "https://github.com/jdwit/ytcli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ytcli"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PLC0415",  # import-outside-toplevel
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (typer pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["ytcli"]
