[project]
name = "ytstudio-cli"
version = "0.4.2"
description = "Manage and analyze your YouTube channel from the terminal. Designed for humans and AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Jelmer de Wit", email = "1598297+jdwit@users.noreply.github.com" }
]
keywords = ["youtube", "youtube-studio", "cli", "analytics", "creator", "video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "packaging>=21.0",
    "pydantic>=2.5",
    "ruamel.yaml>=0.18",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=ytstudio --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/ytstudio"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[project.scripts]
ytstudio = "ytstudio.main:cli"
yts = "ytstudio.main:cli"

[project.urls]
Homepage = "https://github.com/jdwit/ytstudio-cli"
Repository = "https://github.com/jdwit/ytstudio-cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ytstudio"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "PTH",    # pathlib
    "ERA",    # commented-out code
    "PL",     # pylint
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "B008",     # function call in default argument (typer pattern)
    "PLR0913",  # too many arguments
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLR2004",  # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ERA001"]  # allow section comments in test fixtures

[tool.ruff.lint.isort]
known-first-party = ["ytstudio"]
